--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/BuyVip.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/BuyVip.razor
@@ -41,9 +41,8 @@ else
 
 
 
-@code
-{
-[Parameter]
+@code{
+     [Parameter]
         public string movieId { get; set; }
 
         protected VipModel vip = new VipModel()
