--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/DeleteMovieAdmin.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/DeleteMovieAdmin.razor
@@ -34,9 +34,8 @@ else
 <div>@content</div>
 }
 
-@code
-{
-[Parameter]
+@code{
+    [Parameter]
         public string Id { get; set; }
 
         protected MovieModel movie;
