--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/EditMovieStudio.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/EditMovieStudio.razor
@@ -45,9 +45,8 @@ else
 }
 
 
-@code
-{
-[Parameter]
+@code{
+    [Parameter]
         public string Id { get; set; }
 
         protected MovieModel movie;
@@ -97,7 +96,14 @@ else
                 {
                     content = e.Percentage.ToString();
                 };
-                await task;
+                try
+                {
+                    await task;
+                }
+                catch
+                {
+                    content = "More 500MB use the other method upload";
+                }
             }
             else
             {
@@ -127,7 +133,14 @@ else
                 {
                     content = e.Percentage.ToString();
                 };
-                await task;
+                try
+                {
+                    await task;
+                }
+                catch
+                {
+                    content = "More 500MB use the other method upload";
+                }
             }
             else
             {
