--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/MovieCustomer.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/MovieCustomer.razor
@@ -50,9 +50,8 @@ else
 }
 
 
-@code
-{
-protected List<MovieModel> movies = new();
+@code{
+    protected List<MovieModel> movies = new();
         protected string? searchString { get; set; }
         protected bool isSearch = false;
         protected Dictionary<string, string> DicImageLink = new();
