--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/MovieStudio.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/MovieStudio.razor
@@ -47,9 +47,8 @@ else
     
 }
 
-@code
-{
-protected List<MovieModel> movies = new();
+@code{
+    protected List<MovieModel> movies = new();
         protected int index = 0;
         protected string? searchString { get; set; }
         protected bool isSearch = false;
