--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/Profile.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/Profile.razor
@@ -51,6 +51,10 @@
     {
         _navigationManager.NavigateTo("/ResetPassword");
     }
+
+    
+}
+@code{
     protected AccountManagementModel accountManagementModel = new AccountManagementModel();
         protected string content;
         protected override async Task OnInitializedAsync()
@@ -63,5 +67,4 @@
             HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("user/EditProfile", accountManagementModel);
             content = await response.Content.ReadAsStringAsync();
         }
-    
 }
