--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/ResetPassword.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/ResetPassword.razor
@@ -21,6 +21,10 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 </head>
 <!------ Include the above in your HEAD tag ---------->
+<style>
+	@Css
+</style>
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div class="form-gap"></div>
@@ -60,13 +64,14 @@
 
 
 
-@code
-{
-protected ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
+@code{
+	protected ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
         protected string content;
         protected async Task HandleValidSubmit()
         {
             HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword", resetPasswordModel);
             content = await response.Content.ReadAsStringAsync();
         }
+
+		public string Css ="body { font-family: Arial, Helvetica, sans-serif; } .form-gap { padding-top: 10%; } .container { } .out-panel-body { box-shadow: 0 5px 10px rgba(0,0,0,0.2); padding: 15px; border-radius: 12px; } .panel-default { border-color: #fff; } .input-box { display: flex; align-items: center; height: 50px; width: 100%; margin: 10px 0; position: relative; } .input-boxes { margin-top: 30px; } .input-boxes .button-input { color: #fff; background: #7d2ae8; border-radius: 6px; padding: 3%; cursor: pointer; transition: all 0.4s ease; }";
 }
