--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/SalaryStudio.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/SalaryStudio.razor
@@ -19,10 +19,8 @@
 
 <div>@content</div>
 
-
-@code
-{
-protected string Email;
+@code{
+    protected string Email;
         protected string EmailConfirm;
         protected double Cash;
         protected string content;
