--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/BanAccount.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/BanAccount.razor
@@ -30,8 +30,8 @@ else
 <div>@content</div>
 
 
-@code
-{[Parameter]
+@code{
+     [Parameter]
         public string Id { get; set; }
 
         protected AccountManagementModel acc;
@@ -57,5 +57,4 @@ else
             HttpResponseMessage response = await _httpClient.PostAsJsonAsync<string>("Admin/UnBan", acc.Id);
             content = await response.Content.ReadAsStringAsync();
         }
-
 }
