--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/EditAccount.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/EditAccount.razor
@@ -29,9 +29,8 @@ else
 
 <div>@content</div>
 
-@code
-{
-[Parameter]
+@code{
+    [Parameter]
         public string Id { get; set; }
 
         protected AccountManagementModel acc;
