--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/FetchData.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/FetchData.razor
@@ -1,5 +1,4 @@
 ﻿@page "/fetchdata"
-
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -37,9 +36,8 @@ else
     </table>
 }
 
-@code
-{
-protected WeatherForecast[] forecasts;
+@code{
+    protected WeatherForecast[] forecasts;
         protected override async Task OnInitializedAsync()
         {
             forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
