--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/Logout.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/Logout.razor
@@ -6,8 +6,7 @@
 
 @*@attribute [Authorize(Roles = "Studio, Admin")]*@
 
-@code
-{
+@code{
 
         protected override async Task OnInitializedAsync()
         {
