--- a/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/StatusStudio.razor
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/Pages/StatusStudio.razor
@@ -51,9 +51,8 @@ else
     <div>Buy: @status["Buy"]</div>
     
 }
-@code
-{
-[Parameter]
+@code{
+     [Parameter]
         public string Id { get; set; }
 
 
