Done Admin role
- Done UI for admin up to 90%, 10% is not updated yet and optimizing
- bug can not edit data in admin edit account, notice success but reload data is not change

--- a/BlazorApp3/Client/Pages/AdminAccountManagement.razor
+++ b/BlazorApp3/Client/Pages/AdminAccountManagement.razor
@@ -144,8 +144,8 @@
 								</div>
 							</ul>
 						</div>
-						
-						
+
+
 						<div class="sales-details">
 							<ul class="details">
 								<li class="topic">ID</li>
@@ -156,7 +156,7 @@
 
 							</ul>
 							<ul class="details">
-								<li class="topic" @onclick="EmailSortParm"><i class='bx bx-mail-send'></i> Email</li>
+								<li class="topic"><i class='bx bx-mail-send'></i> Email</li>
 								@foreach (var acc in accs)
 								{
 									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;"><a href="#">@acc.Email</a></li>
@@ -213,7 +213,8 @@
 					</div>
 				</div>
 			</div>
-		}@* Here is end else*@
+		}
+		@* Here is end else*@
 
 	</section>
 
