--- a/BlazorApp3/Client/Pages/EditAccount.razor
+++ b/BlazorApp3/Client/Pages/EditAccount.razor
@@ -77,7 +77,7 @@ else
 									</div>
 									<div class="input-box">
 										<i class="fas fa-money-check"></i>
-										<input type="number" placeholder="Replace this wallet" @bind="@acc.Wallet" required>
+										<input type="number" step="0.0000000000001" placeholder="Replace this wallet" @bind="@acc.Wallet" required>
 									</div>
 									<div class="button input-box">
 										<input type="submit" value="Confirm">
