--- a/MauiApp2/MauiApp2/Pages/Login.razor
+++ b/MauiApp2/MauiApp2/Pages/Login.razor
@@ -1,6 +1,7 @@
 ﻿@inject IJSRuntime JS
 @inject IAccountService _accountService;
 @page "/login"
+@using MauiApp2.Services
 @*<button @onclick="@( () =>  DivCSS("display: block;"))" style="width:auto; margin:0; position: absolute;top: 50%;left: 50%;" class=" zoom2">Login</button>*@
 
 @*<div id="id01" class="modal" style="@divCSS">
