--- a/BlazorApp3/Client/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/EditMovieAdmin.razor
@@ -69,7 +69,15 @@ else
 		}
 		else
 		{
-			<div class="forms">
+            if(more)
+    {
+        <iframe src="@linkIframe" height="400" width="600"></iframe>
+        }
+            else
+            {
+                
+            
+            <div class="forms">
 				<div class="form-content">
 					<div class="login-form">
 						<div class="title">Replace any data of ID </div>
@@ -120,37 +128,16 @@ else
 						<InputFile OnChange="OnChooseImageFile" />
 
 
-						<div>If your upload more 500MB Up in the under form </div>
+						<div>If your upload more 500MB click this button</div>
+                     <button type="submit" @onclick="@Upload">Upload</button>
 						
 						<div>@mp</div>
 						<div>@ip</div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-    <div class="col-md-4">
-		
-        <form action="@linkUp" enctype="multipart/form-data" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger">If it is not a movie or image correct MIME it will not be uploaded.</div>
-           
-            <div class="form-group">
-                <label asp-for="ImageFile" class="control-label">Image</label>
-                <input id="ImageFileUp" name="ImageFileUp" class="form-control" type="file"/>
-                <span asp-validation-for="ImageFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MovieFile" class="control-label">Movie</label>
-                <input id="MovieFileUp" name="MovieFileUp" class="form-control" type="file"/>
-                <span asp-validation-for="MovieFile" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
-            </div>
-        </form>
-        <span id="spnMessage"></span>
-    </div>
-</div>
+
+            }
 		} @*end else*@
 
 	</div>
@@ -168,6 +155,9 @@ else
         private readonly string mp;
         private readonly string ip;
         private string linkUp;
+        private bool more = false;
+        private string linkIframe;
+
         protected override async Task OnInitializedAsync()
         {
             if (Id == null)
@@ -176,6 +166,7 @@ else
             }
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
             linkUp = $"/Admin/MovieUpload/{movie.MovieId}/{movie.StudioId}";
+            linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
         }
 
         private async Task HandleValidSubmit()
@@ -263,7 +254,7 @@ else
         }
         private async Task Upload()
         {
-            _navigationManager.NavigateTo($"/admin/MovieUpload/{Id}", true);
+            more = true;
         }
 	}
 
