--- a/BlazorApp3/Client/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/EditMovieAdmin.razor
@@ -152,9 +152,8 @@ else
         private IBrowserFile movieFile;
         private IBrowserFile imageFile;
         private string content;
-        private readonly string mp;
-        private readonly string ip;
-        private string linkUp;
+        private string mp;
+        private string ip;
         private bool more = false;
         private string linkIframe;
 
@@ -165,7 +164,6 @@ else
                 _navigationManager.NavigateTo("/MovieAdmin");
             }
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
-            linkUp = $"/Admin/MovieUpload/{movie.MovieId}/{movie.StudioId}";
             linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
         }
 
@@ -198,9 +196,9 @@ else
                 char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
                 string token = new string(tokena);
                 FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").PutAsync(movieFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += async (s, e) =>
+                task.Progress.ProgressChanged += (s, e) =>
                 {
-                    content = e.Percentage.ToString();
+                    mp = e.Percentage.ToString();
                 };
                 try
                 {
@@ -234,9 +232,9 @@ else
                 char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
                 string token = new string(tokena);
                 FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Image").PutAsync(imageFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += async (s, e) =>
+                task.Progress.ProgressChanged += (s, e) =>
                 {
-                    content = e.Percentage.ToString();
+                    ip = e.Percentage.ToString();
                 };
                 try
                 {
@@ -252,7 +250,7 @@ else
                 content = "Incorrect MIME";
             }
         }
-        private async Task Upload()
+        private void Upload()
         {
             more = true;
         }
