Update UI for Studio & some problem
- Update:
   + UI for movie studio
   + UI for studio edit movie
   + Chart hasn't been updated yet
   + UI for Studio create movie not updated yet
- Note:
   + Delete function on studio movie not active yet
   + Studio create movie not active yet, it require some ID, but no ID is displayed.
   + Need add MovieDescription, MovieIMG.
   + Need fix some problem
above list

--- a/BlazorApp3/Client/Shared/NavMenu.razor.css
+++ b/BlazorApp3/Client/Shared/NavMenu.razor.css
@@ -351,9 +351,9 @@
 
     .sidebar {
         height: 100vh;
-        position: sticky;
+        /*position: sticky;*/
         top: 0;
-        width: 250px;
+        /*width: 250px;*/
     }
 
     .top-row {
