--- a/BlazorApp3/Client/Pages/CreateStudio.razor
+++ b/BlazorApp3/Client/Pages/CreateStudio.razor
@@ -1,32 +1,62 @@
-﻿<h3>StudioUpload</h3>
-@attribute [Authorize(Roles ="Studio")]
+﻿<h3>StudioCreateMovie</h3>
+@attribute [Authorize(Roles = "Studio")]
 @page "/CreateStudio"
 
 <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/>
+    <DataAnnotationsValidator />
+    <ValidationSummary />
     MovieGenre
-    <InputText  @bind-Value="@movie.MovieGenre"/><br>
+    <InputText @bind-Value="@movie.MovieGenre" /><br>
     MovieName
-    <InputText  @bind-Value="@movie.MovieName"/><br>
+    <InputText @bind-Value="@movie.MovieName" /><br>
     PremiereDate
-    <InputDate  @bind-Value="@movie.PremiereDate"/><br>
+    <InputDate @bind-Value="@movie.PremiereDate" /><br>
 
     <button type="submit">Submit</button>
 </EditForm>
 <div>@content</div>
 
-@code{
-    private readonly MovieModel movie = new();
-        private string? content;
-        private async Task HandleValidSubmit()
-        {
-            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Studio/Upload", movie);
-            content = await response.Content.ReadAsStringAsync();
-        }
 
-        protected override async Task OnInitializedAsync()
-        {
-            movie.PremiereDate = DateTime.Now;
-        }
+@*<head>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossOrigin="anonymous" />
+</head>
+<div class="container">
+    <form class="login-form" autocomplete="off" action="#">
+        <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            <a style="font-weight: 900;">Gender </a>
+            <input type="text" placeholder="Type gender of movie" @bind="@movie.MovieGenre"/>
+            <a style="font-weight: 900;">Name </a>
+            <input type="text" placeholder="Type name of movie" @bind="@movie.MovieName"/>
+            <a style="font-weight: 900;">Premiere Date</a>
+            <input type="date"  @bind="@movie.PremiereDate" />
+            <button>Submit</button>
+        </EditForm>
+        <div>@content</div>
+    </form>
+</div>*@
+
+
+
+
+
+
+
+
+
+@code {
+    private readonly MovieModel movie = new();
+    private string? content;
+    private async Task HandleValidSubmit()
+    {
+        HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Studio/Upload", movie);
+        content = await response.Content.ReadAsStringAsync();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        movie.PremiereDate = DateTime.Now;
+    }
 }
