--- a/BlazorApp3/Client/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/EditMovieAdmin.razor
@@ -66,7 +66,14 @@
 										<i class="far fa-calendar-alt"></i>
 										<input type="date" placeholder="Premiere Date" @bind="@movie.PremiereDate"  required>
 										<a>Pre Date</a>
-									</div>									
+									</div>	
+                                    
+                                    <div class="input-box">
+										<i class="far fa-calendar-alt"></i>
+										<input type="text" placeholder="Premiere Date" @bind="@movie.MoviesDescription"  required>
+										<a>MoviesDescription</a>
+									</div>	
+
 									<div class="button input-box">
 										<input type="submit" value="Confirm">
 									</div>
