--- a/BlazorApp3/Client/Pages/MovieStudio.razor
+++ b/BlazorApp3/Client/Pages/MovieStudio.razor
@@ -86,7 +86,7 @@ else
                         <div class="card-body">
                             <h1 class="card-title">@item.MovieName</h1>
                             <p class="card-text">                                
-                                item.MoviesDescription
+                                @item.MoviesDescription
                             </p>
                             <h5 class="card-text">Gender: @item.MovieGenre</h5>
                             <h6 class="card-text">Premiere Date: @item.PremiereDate.ToShortDateString()</h6>
