--- a/BlazorApp3/Client/Pages/EditMovieStudio.razor
+++ b/BlazorApp3/Client/Pages/EditMovieStudio.razor
@@ -119,7 +119,7 @@ if(more)
                                     
                                     <div class="input-box">
 										<i class="far fa-calendar-alt"></i>
-										<input type="text" placeholder="Premiere Date" @bind="@movie.MoviesDescription"  required>
+										<input type="text" placeholder="Movies Description" @bind="@movie.MoviesDescription"  required>
 										<a>MoviesDescription</a>
 									</div>	
 
