--- a/BlazorApp3/Client/Pages/CreateStudio.razor
+++ b/BlazorApp3/Client/Pages/CreateStudio.razor
@@ -11,7 +11,8 @@
     <InputText @bind-Value="@movie.MovieName" /><br>
     PremiereDate
     <InputDate @bind-Value="@movie.PremiereDate" /><br>
-
+    MoviesDescription
+    <InputText @bind-Value="@movie.MoviesDescription" /><br>
     <button type="submit">Submit</button>
 </EditForm>
 <div>@content</div>
